feat():added profile and mail
here complete addProfile and update mail in a single route and it depenedency
