# pkg/domain/requst.model.go
@@ -5,3 +5,13 @@ type Signup struct {
 	PhoneNumber string `json:"phonenumber"`
 	Otp         string `json:"otp"`
 }
+
+type UserData struct {
+	UserId       int
+	Email        string
+	FirstName    string
+	LastName     string
+	Gender       string
+	Dob          string
+	ProfilePhoto string `json:"profilephoto"  binding:"required"`
+}
